# Python-Physics-Engine

./: Main.py  README.md  fact.py  log.py
physics_engine/: Main.py  README.txt  formulas.py  forumulas.py  installer.bat
physics_engine - Copy/: pyproject.toml
physics_engine - Copy/Assets/: forumulas.py
physics_engine/Assets/: Creator.py  forumulas.py  getoutahere.py  github.txt
