[tool.poetry]
name = "pygame_physics-engine"
version = "0.1.2"
description = "A basic python physics engine"
authors = ["Jackson G, Hudson B, Graesaaeason C, Jun K"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
